PL PROJETO/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declarations block DOT
Rule 2     declarations -> declaration_list
Rule 3     declarations -> empty
Rule 4     declaration_list -> declaration
Rule 5     declaration_list -> declaration_list declaration
Rule 6     declaration -> VAR var_decl_list
Rule 7     declaration -> function_decl
Rule 8     function_decl_list -> function_decl
Rule 9     function_decl_list -> function_decl_list function_decl
Rule 10    function_decl -> FUNCTION ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON
Rule 11    param_list -> param
Rule 12    param_list -> param_list SEMICOLON param
Rule 13    param -> id_list COLON type
Rule 14    var_decl_list -> var_decl_list var_decl
Rule 15    var_decl_list -> var_decl
Rule 16    var_decl -> id_list COLON type SEMICOLON
Rule 17    id_list -> ID
Rule 18    id_list -> id_list COMMA ID
Rule 19    type -> base_type
Rule 20    type -> array_type
Rule 21    array_type -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF base_type
Rule 22    base_type -> INTEGER
Rule 23    base_type -> BOOLEAN
Rule 24    base_type -> STRING
Rule 25    base_type -> REAL
Rule 26    block -> BEGIN statement_list END
Rule 27    statement_list -> statement
Rule 28    statement_list -> statement_list SEMICOLON statement
Rule 29    statement -> assignment
Rule 30    statement -> if_statement
Rule 31    statement -> while_statement
Rule 32    statement -> for_statement
Rule 33    statement -> write_statement
Rule 34    statement -> read_statement
Rule 35    statement -> block
Rule 36    statement -> empty
Rule 37    assignment -> ID ASSIGN expression
Rule 38    if_statement -> IF expression THEN statement
Rule 39    if_statement -> IF expression THEN statement ELSE statement
Rule 40    while_statement -> WHILE expression DO statement
Rule 41    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 42    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 43    write_statement -> WRITE LPAREN write_args RPAREN
Rule 44    write_statement -> WRITELN LPAREN write_args RPAREN
Rule 45    write_args -> expression
Rule 46    write_args -> write_args COMMA expression
Rule 47    read_statement -> READLN LPAREN expression RPAREN
Rule 48    expression -> expression PLUS expression
Rule 49    expression -> expression MINUS expression
Rule 50    expression -> expression TIMES expression
Rule 51    expression -> expression DIVIDE expression
Rule 52    expression -> expression DIV expression
Rule 53    expression -> expression MOD expression
Rule 54    expression -> expression EQ expression
Rule 55    expression -> expression NE expression
Rule 56    expression -> expression LT expression
Rule 57    expression -> expression LE expression
Rule 58    expression -> expression GT expression
Rule 59    expression -> expression GE expression
Rule 60    expression -> expression AND expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> NOT expression
Rule 63    expression -> MINUS expression
Rule 64    expression -> LPAREN expression RPAREN
Rule 65    expression -> NUMBER
Rule 66    expression -> STRING_LITERAL
Rule 67    expression -> TRUE
Rule 68    expression -> FALSE
Rule 69    expression -> ID
Rule 70    expression -> ID LBRACKET expression RBRACKET
Rule 71    expression -> ID LPAREN expression_list RPAREN
Rule 72    expression_list -> expression
Rule 73    expression_list -> expression_list COMMA expression
Rule 74    empty -> <empty>

Terminals, with rules where they appear

AND                  : 60
ARRAY                : 21
ASSIGN               : 37 41 42
BEGIN                : 26
BOOLEAN              : 23
COLON                : 10 13 16
COMMA                : 18 46 73
DIV                  : 52
DIVIDE               : 51
DO                   : 40 41 42
DOT                  : 1
DOTDOT               : 21
DOWNTO               : 42
ELSE                 : 39
END                  : 26
EQ                   : 54
FALSE                : 68
FOR                  : 41 42
FUNCTION             : 10
GE                   : 59
GT                   : 58
ID                   : 1 10 17 18 37 41 42 69 70 71
IF                   : 38 39
INTEGER              : 22
LBRACKET             : 21 70
LE                   : 57
LPAREN               : 10 43 44 47 64 71
LT                   : 56
MINUS                : 49 63
MOD                  : 53
NE                   : 55
NOT                  : 62
NUMBER               : 21 21 65
OF                   : 21
OR                   : 61
PLUS                 : 48
PROGRAM              : 1
RBRACKET             : 21 70
READLN               : 47
REAL                 : 25
RPAREN               : 10 43 44 47 64 71
SEMICOLON            : 1 10 10 12 16 28
STRING               : 24
STRING_LITERAL       : 66
THEN                 : 38 39
TIMES                : 50
TO                   : 41
TRUE                 : 67
VAR                  : 6
WHILE                : 40
WRITE                : 43
WRITELN              : 44
error                : 

Nonterminals, with rules where they appear

array_type           : 20
assignment           : 29
base_type            : 10 19 21
block                : 1 10 35
declaration          : 4 5
declaration_list     : 2 5
declarations         : 1 10
empty                : 3 36
expression           : 37 38 39 40 41 41 42 42 45 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 63 64 70 72 73
expression_list      : 71 73
for_statement        : 32
function_decl        : 7 8 9
function_decl_list   : 9
id_list              : 13 16 18
if_statement         : 30
param                : 11 12
param_list           : 10 12
program              : 0
read_statement       : 34
statement            : 27 28 38 39 39 40 41 42
statement_list       : 26 28
type                 : 13 16
var_decl             : 14 15
var_decl_list        : 6 14
while_statement      : 31
write_args           : 43 44 46
write_statement      : 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declarations block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declarations block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declarations block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declarations block DOT
    (2) declarations -> . declaration_list
    (3) declarations -> . empty
    (4) declaration_list -> . declaration
    (5) declaration_list -> . declaration_list declaration
    (74) empty -> .
    (6) declaration -> . VAR var_decl_list
    (7) declaration -> . function_decl
    (10) function_decl -> . FUNCTION ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    BEGIN           reduce using rule 74 (empty -> .)
    VAR             shift and go to state 9
    FUNCTION        shift and go to state 11

    declarations                   shift and go to state 5
    declaration_list               shift and go to state 6
    empty                          shift and go to state 7
    declaration                    shift and go to state 8
    function_decl                  shift and go to state 10

state 5

    (1) program -> PROGRAM ID SEMICOLON declarations . block DOT
    (26) block -> . BEGIN statement_list END

    BEGIN           shift and go to state 13

    block                          shift and go to state 12

state 6

    (2) declarations -> declaration_list .
    (5) declaration_list -> declaration_list . declaration
    (6) declaration -> . VAR var_decl_list
    (7) declaration -> . function_decl
    (10) function_decl -> . FUNCTION ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    BEGIN           reduce using rule 2 (declarations -> declaration_list .)
    VAR             shift and go to state 9
    FUNCTION        shift and go to state 11

    declaration                    shift and go to state 14
    function_decl                  shift and go to state 10

state 7

    (3) declarations -> empty .

    BEGIN           reduce using rule 3 (declarations -> empty .)


state 8

    (4) declaration_list -> declaration .

    VAR             reduce using rule 4 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 4 (declaration_list -> declaration .)
    BEGIN           reduce using rule 4 (declaration_list -> declaration .)


state 9

    (6) declaration -> VAR . var_decl_list
    (14) var_decl_list -> . var_decl_list var_decl
    (15) var_decl_list -> . var_decl
    (16) var_decl -> . id_list COLON type SEMICOLON
    (17) id_list -> . ID
    (18) id_list -> . id_list COMMA ID

    ID              shift and go to state 18

    var_decl_list                  shift and go to state 15
    var_decl                       shift and go to state 16
    id_list                        shift and go to state 17

state 10

    (7) declaration -> function_decl .

    VAR             reduce using rule 7 (declaration -> function_decl .)
    FUNCTION        reduce using rule 7 (declaration -> function_decl .)
    BEGIN           reduce using rule 7 (declaration -> function_decl .)


state 11

    (10) function_decl -> FUNCTION . ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    ID              shift and go to state 19


state 12

    (1) program -> PROGRAM ID SEMICOLON declarations block . DOT

    DOT             shift and go to state 20


state 13

    (26) block -> BEGIN . statement_list END
    (27) statement_list -> . statement
    (28) statement_list -> . statement_list SEMICOLON statement
    (29) statement -> . assignment
    (30) statement -> . if_statement
    (31) statement -> . while_statement
    (32) statement -> . for_statement
    (33) statement -> . write_statement
    (34) statement -> . read_statement
    (35) statement -> . block
    (36) statement -> . empty
    (37) assignment -> . ID ASSIGN expression
    (38) if_statement -> . IF expression THEN statement
    (39) if_statement -> . IF expression THEN statement ELSE statement
    (40) while_statement -> . WHILE expression DO statement
    (41) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (42) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (43) write_statement -> . WRITE LPAREN write_args RPAREN
    (44) write_statement -> . WRITELN LPAREN write_args RPAREN
    (47) read_statement -> . READLN LPAREN expression RPAREN
    (26) block -> . BEGIN statement_list END
    (74) empty -> .

    ID              shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    WRITE           shift and go to state 35
    WRITELN         shift and go to state 36
    READLN          shift and go to state 37
    BEGIN           shift and go to state 13
    END             reduce using rule 74 (empty -> .)
    SEMICOLON       reduce using rule 74 (empty -> .)

    statement_list                 shift and go to state 21
    statement                      shift and go to state 22
    assignment                     shift and go to state 23
    if_statement                   shift and go to state 24
    while_statement                shift and go to state 25
    for_statement                  shift and go to state 26
    write_statement                shift and go to state 27
    read_statement                 shift and go to state 28
    block                          shift and go to state 29
    empty                          shift and go to state 30

state 14

    (5) declaration_list -> declaration_list declaration .

    VAR             reduce using rule 5 (declaration_list -> declaration_list declaration .)
    FUNCTION        reduce using rule 5 (declaration_list -> declaration_list declaration .)
    BEGIN           reduce using rule 5 (declaration_list -> declaration_list declaration .)


state 15

    (6) declaration -> VAR var_decl_list .
    (14) var_decl_list -> var_decl_list . var_decl
    (16) var_decl -> . id_list COLON type SEMICOLON
    (17) id_list -> . ID
    (18) id_list -> . id_list COMMA ID

    VAR             reduce using rule 6 (declaration -> VAR var_decl_list .)
    FUNCTION        reduce using rule 6 (declaration -> VAR var_decl_list .)
    BEGIN           reduce using rule 6 (declaration -> VAR var_decl_list .)
    ID              shift and go to state 18

    var_decl                       shift and go to state 38
    id_list                        shift and go to state 17

state 16

    (15) var_decl_list -> var_decl .

    ID              reduce using rule 15 (var_decl_list -> var_decl .)
    VAR             reduce using rule 15 (var_decl_list -> var_decl .)
    FUNCTION        reduce using rule 15 (var_decl_list -> var_decl .)
    BEGIN           reduce using rule 15 (var_decl_list -> var_decl .)


state 17

    (16) var_decl -> id_list . COLON type SEMICOLON
    (18) id_list -> id_list . COMMA ID

    COLON           shift and go to state 39
    COMMA           shift and go to state 40


state 18

    (17) id_list -> ID .

    COLON           reduce using rule 17 (id_list -> ID .)
    COMMA           reduce using rule 17 (id_list -> ID .)


state 19

    (10) function_decl -> FUNCTION ID . LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    LPAREN          shift and go to state 41


state 20

    (1) program -> PROGRAM ID SEMICOLON declarations block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declarations block DOT .)


state 21

    (26) block -> BEGIN statement_list . END
    (28) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 42
    SEMICOLON       shift and go to state 43


state 22

    (27) statement_list -> statement .

    END             reduce using rule 27 (statement_list -> statement .)
    SEMICOLON       reduce using rule 27 (statement_list -> statement .)


state 23

    (29) statement -> assignment .

    END             reduce using rule 29 (statement -> assignment .)
    SEMICOLON       reduce using rule 29 (statement -> assignment .)
    ELSE            reduce using rule 29 (statement -> assignment .)


state 24

    (30) statement -> if_statement .

    END             reduce using rule 30 (statement -> if_statement .)
    SEMICOLON       reduce using rule 30 (statement -> if_statement .)
    ELSE            reduce using rule 30 (statement -> if_statement .)


state 25

    (31) statement -> while_statement .

    END             reduce using rule 31 (statement -> while_statement .)
    SEMICOLON       reduce using rule 31 (statement -> while_statement .)
    ELSE            reduce using rule 31 (statement -> while_statement .)


state 26

    (32) statement -> for_statement .

    END             reduce using rule 32 (statement -> for_statement .)
    SEMICOLON       reduce using rule 32 (statement -> for_statement .)
    ELSE            reduce using rule 32 (statement -> for_statement .)


state 27

    (33) statement -> write_statement .

    END             reduce using rule 33 (statement -> write_statement .)
    SEMICOLON       reduce using rule 33 (statement -> write_statement .)
    ELSE            reduce using rule 33 (statement -> write_statement .)


state 28

    (34) statement -> read_statement .

    END             reduce using rule 34 (statement -> read_statement .)
    SEMICOLON       reduce using rule 34 (statement -> read_statement .)
    ELSE            reduce using rule 34 (statement -> read_statement .)


state 29

    (35) statement -> block .

    END             reduce using rule 35 (statement -> block .)
    SEMICOLON       reduce using rule 35 (statement -> block .)
    ELSE            reduce using rule 35 (statement -> block .)


state 30

    (36) statement -> empty .

    END             reduce using rule 36 (statement -> empty .)
    SEMICOLON       reduce using rule 36 (statement -> empty .)
    ELSE            reduce using rule 36 (statement -> empty .)


state 31

    (37) assignment -> ID . ASSIGN expression

    ASSIGN          shift and go to state 44


state 32

    (38) if_statement -> IF . expression THEN statement
    (39) if_statement -> IF . expression THEN statement ELSE statement
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MOD expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NE expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression LE expression
    (58) expression -> . expression GT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . MINUS expression
    (64) expression -> . LPAREN expression RPAREN
    (65) expression -> . NUMBER
    (66) expression -> . STRING_LITERAL
    (67) expression -> . TRUE
    (68) expression -> . FALSE
    (69) expression -> . ID
    (70) expression -> . ID LBRACKET expression RBRACKET
    (71) expression -> . ID LPAREN expression_list RPAREN

    NOT             shift and go to state 47
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 48
    NUMBER          shift and go to state 49
    STRING_LITERAL  shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 45

state 33

    (40) while_statement -> WHILE . expression DO statement
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MOD expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NE expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression LE expression
    (58) expression -> . expression GT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . MINUS expression
    (64) expression -> . LPAREN expression RPAREN
    (65) expression -> . NUMBER
    (66) expression -> . STRING_LITERAL
    (67) expression -> . TRUE
    (68) expression -> . FALSE
    (69) expression -> . ID
    (70) expression -> . ID LBRACKET expression RBRACKET
    (71) expression -> . ID LPAREN expression_list RPAREN

    NOT             shift and go to state 47
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 48
    NUMBER          shift and go to state 49
    STRING_LITERAL  shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 54

state 34

    (41) for_statement -> FOR . ID ASSIGN expression TO expression DO statement
    (42) for_statement -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 55


state 35

    (43) write_statement -> WRITE . LPAREN write_args RPAREN

    LPAREN          shift and go to state 56


state 36

    (44) write_statement -> WRITELN . LPAREN write_args RPAREN

    LPAREN          shift and go to state 57


state 37

    (47) read_statement -> READLN . LPAREN expression RPAREN

    LPAREN          shift and go to state 58


state 38

    (14) var_decl_list -> var_decl_list var_decl .

    ID              reduce using rule 14 (var_decl_list -> var_decl_list var_decl .)
    VAR             reduce using rule 14 (var_decl_list -> var_decl_list var_decl .)
    FUNCTION        reduce using rule 14 (var_decl_list -> var_decl_list var_decl .)
    BEGIN           reduce using rule 14 (var_decl_list -> var_decl_list var_decl .)


state 39

    (16) var_decl -> id_list COLON . type SEMICOLON
    (19) type -> . base_type
    (20) type -> . array_type
    (22) base_type -> . INTEGER
    (23) base_type -> . BOOLEAN
    (24) base_type -> . STRING
    (25) base_type -> . REAL
    (21) array_type -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF base_type

    INTEGER         shift and go to state 62
    BOOLEAN         shift and go to state 63
    STRING          shift and go to state 64
    REAL            shift and go to state 65
    ARRAY           shift and go to state 66

    type                           shift and go to state 59
    base_type                      shift and go to state 60
    array_type                     shift and go to state 61

state 40

    (18) id_list -> id_list COMMA . ID

    ID              shift and go to state 67


state 41

    (10) function_decl -> FUNCTION ID LPAREN . param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON
    (11) param_list -> . param
    (12) param_list -> . param_list SEMICOLON param
    (13) param -> . id_list COLON type
    (17) id_list -> . ID
    (18) id_list -> . id_list COMMA ID

    ID              shift and go to state 18

    param_list                     shift and go to state 68
    param                          shift and go to state 69
    id_list                        shift and go to state 70

state 42

    (26) block -> BEGIN statement_list END .

    DOT             reduce using rule 26 (block -> BEGIN statement_list END .)
    END             reduce using rule 26 (block -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 26 (block -> BEGIN statement_list END .)
    ELSE            reduce using rule 26 (block -> BEGIN statement_list END .)


state 43

    (28) statement_list -> statement_list SEMICOLON . statement
    (29) statement -> . assignment
    (30) statement -> . if_statement
    (31) statement -> . while_statement
    (32) statement -> . for_statement
    (33) statement -> . write_statement
    (34) statement -> . read_statement
    (35) statement -> . block
    (36) statement -> . empty
    (37) assignment -> . ID ASSIGN expression
    (38) if_statement -> . IF expression THEN statement
    (39) if_statement -> . IF expression THEN statement ELSE statement
    (40) while_statement -> . WHILE expression DO statement
    (41) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (42) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (43) write_statement -> . WRITE LPAREN write_args RPAREN
    (44) write_statement -> . WRITELN LPAREN write_args RPAREN
    (47) read_statement -> . READLN LPAREN expression RPAREN
    (26) block -> . BEGIN statement_list END
    (74) empty -> .

    ID              shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    WRITE           shift and go to state 35
    WRITELN         shift and go to state 36
    READLN          shift and go to state 37
    BEGIN           shift and go to state 13
    END             reduce using rule 74 (empty -> .)
    SEMICOLON       reduce using rule 74 (empty -> .)

    statement                      shift and go to state 71
    assignment                     shift and go to state 23
    if_statement                   shift and go to state 24
    while_statement                shift and go to state 25
    for_statement                  shift and go to state 26
    write_statement                shift and go to state 27
    read_statement                 shift and go to state 28
    block                          shift and go to state 29
    empty                          shift and go to state 30

state 44

    (37) assignment -> ID ASSIGN . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MOD expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NE expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression LE expression
    (58) expression -> . expression GT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . MINUS expression
    (64) expression -> . LPAREN expression RPAREN
    (65) expression -> . NUMBER
    (66) expression -> . STRING_LITERAL
    (67) expression -> . TRUE
    (68) expression -> . FALSE
    (69) expression -> . ID
    (70) expression -> . ID LBRACKET expression RBRACKET
    (71) expression -> . ID LPAREN expression_list RPAREN

    NOT             shift and go to state 47
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 48
    NUMBER          shift and go to state 49
    STRING_LITERAL  shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 72

state 45

    (38) if_statement -> IF expression . THEN statement
    (39) if_statement -> IF expression . THEN statement ELSE statement
    (48) expression -> expression . PLUS expression
    (49) expression -> expression . MINUS expression
    (50) expression -> expression . TIMES expression
    (51) expression -> expression . DIVIDE expression
    (52) expression -> expression . DIV expression
    (53) expression -> expression . MOD expression
    (54) expression -> expression . EQ expression
    (55) expression -> expression . NE expression
    (56) expression -> expression . LT expression
    (57) expression -> expression . LE expression
    (58) expression -> expression . GT expression
    (59) expression -> expression . GE expression
    (60) expression -> expression . AND expression
    (61) expression -> expression . OR expression

    THEN            shift and go to state 73
    PLUS            shift and go to state 74
    MINUS           shift and go to state 75
    TIMES           shift and go to state 76
    DIVIDE          shift and go to state 77
    DIV             shift and go to state 78
    MOD             shift and go to state 79
    EQ              shift and go to state 80
    NE              shift and go to state 81
    LT              shift and go to state 82
    LE              shift and go to state 83
    GT              shift and go to state 84
    GE              shift and go to state 85
    AND             shift and go to state 86
    OR              shift and go to state 87


state 46

    (63) expression -> MINUS . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MOD expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NE expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression LE expression
    (58) expression -> . expression GT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . MINUS expression
    (64) expression -> . LPAREN expression RPAREN
    (65) expression -> . NUMBER
    (66) expression -> . STRING_LITERAL
    (67) expression -> . TRUE
    (68) expression -> . FALSE
    (69) expression -> . ID
    (70) expression -> . ID LBRACKET expression RBRACKET
    (71) expression -> . ID LPAREN expression_list RPAREN

    NOT             shift and go to state 47
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 48
    NUMBER          shift and go to state 49
    STRING_LITERAL  shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 88

state 47

    (62) expression -> NOT . expression
    (48) expression -> . expression PLUS expression
    (49) expression -> . expression MINUS expression
    (50) expression -> . expression TIMES expression
    (51) expression -> . expression DIVIDE expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MOD expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NE expression
    (56) expression -> . expression LT expression
    (57) expression -> . expression LE expression
    (58) expression -> . expression GT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . NOT expression
    (63) expression -> . MINUS expression
    (64) expression -> . LPAREN expression RPAREN
    (65) expression -> . NUMBER
    (66) expression -> . STRING_LITERAL
    (67) expression -> . TRUE
    (68) expression -> . FALSE
    (69) expression -> . ID
    (70) expression -> . ID LBRACKET expression RBRACKET
    (71) expression -> . ID LPAREN expression_list RPAREN

    NOT             shift and go to state 47
    MINUS           shift and go to state 46
    LPAREN          shift and go to state 48
    NUMBER          shift and go to state 49
    STRING_LITERAL  shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 89

state 48
